validator-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: validator-frontend
  name: validator-frontend
  namespace: jumia-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      env: dev
      tier: frontend
  template:
   metadata:
    labels:
     env: dev
     tier: frontend
    name: validator-frontend-image
   spec:
    containers:
    - image: 992122884453.dkr.ecr.eu-central-1.amazonaws.com/validator-frontend-image
      name: validator-frontend-image
      ports:
      - name: frontend
        containerPort: 8181
      resources:
       limits:
        cpu: "1"
        memory: 1Gi
       requests:
        cpu: 300m
        memory: 300Mi
    restartPolicy: Always
    serviceAccountName: default
