frontend-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: jumia-devops
  annotations:
   kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: tizok8s.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8081
